--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h2>Instructions</h2>
             <ol>
                 <li>Ensure your file is in <strong>.xlsx</strong> format. Other formats are not supported.</li>
+                <li>Make sure <strong>Serial #</strong> column is filled out for it to work</li>
                 <li>Drag and drop your file into the area below, or click to browse and select your file.</li>
                 <li>Wait for the file to be processed. The processed file will automatically download.</li>
                 <li>If the download doesn't start, a download link will be provided for manual download.</li>
